--- a/_includes/body/sidebar.html
+++ b/_includes/body/sidebar.html
@@ -4,7 +4,7 @@
   side="left"
   threshold="10"
   noscroll
-  {% if include.cover %}opened{% endif %}
+  {% if include.cover or site.sidebar_drawer_opened %}opened{% endif %}
 >
   <header id="_sidebar" class="sidebar{% if include.invert %} invert{% endif %}" role="banner">
     {% include_cached body/sidebar-bg.html image=include.image color=include.color theme_color=include.theme_color %}
