--- a/_includes/body/sidebar.html
+++ b/_includes/body/sidebar.html
@@ -61,6 +61,7 @@
     }
 
     window.addEventListener('load', run, { once: true });
+    window.addEventListener('home-intro-finished', openDrawerOnMobile, { once: true });
   })();
 </script>
 {% endif %}
